daniel_escobar/session01/exercise03/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-03
  labels:
    app: wordpress
    type: frontend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend

    spec:
      containers:
      - image: bitnami/wordpress:latest
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        name: wordpress
        ports:
        - name: http
          containerPort: 80
