daniel_escobar/session01/exercise03/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: exercise-03
  labels:
    app: wordpress
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  rules:
  - host: wordpress-exercise-03.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: http-svc
